
(ocamllex LexBasilIR)

(menhir 
  (modules ParBasilIR)
  )

(library
 (name BasilIR)
 (modules AbsBasilIR BNFC_Util PrintBasilIR showBasilIR SkelBasilIR LexBasilIR ParBasilIR)
 (preprocess (pps ppx_deriving.eq ppx_deriving.iter ppx_deriving.map ppx_deriving.fold))
 (flags
  (-w -27 -w -39 -w -33))
 )

